# easy-profile

./: .clang-format  .gitignore  CMakeLists.txt  EasyProfile.h  Makefile  README.md  test.cpp
any/: README.md
any/include/: Profile.h
experiments/any/: README.md
experiments/any/include/: Profile.h
experiments/def/: README.md
experiments/def/include/: Profile.h
experiments/simple/include/: Profile.h
experiments/src/: any.cpp  any.h  def.cpp  helpers.cpp  simple.cpp  simple.h  strong.cpp  variant.cpp  variant.h
experiments/strong/: README.md
experiments/variant/: README.md
src/: Profile.cpp  Profile.h  any.cpp  any.h  def.h  helpers.h  main.cpp  strong.cpp  strong.h
strong/include/: Profile.h
strong/src/: Profile.cpp
variant/include/: Profile.h
